Wed Jun 14 23:03:53 2006  Tanaka Akira  <akr@m17n.org>

	* configure.in: check sizeof(rlim_t).
	  check setrlimit.
	
	* process.c (proc_getrlimit): new method Process.getrlimit.
	  (proc_setrlimit): new method Process.setrlimit.

	* ruby.h (NUM2ULL): new macro.
	  
Mon Jun 12 22:25:09 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): adjust precision length to prevent
	  splitting multi-byte characters.  [ruby-list:42389]

Sun Jun 11 23:20:07 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Arguable#getopts): pass self to the
	  parser.

Sun Jun 11 10:00:57 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.h (write): not need to define on bcc.

Sun Jun 11 08:30:33 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#getopts): new methods.

Sat Jun 10 18:02:40 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/newton.rb (Newton::nlsolve): typo
	  fixed: raize -> raise.  [ruby-talk:196608]

Thu Jun  8 14:19:17 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.[ch] (rb_w32_read, rb_w32_write): new functions.
	  use recv() and send() when fd is socket. fixed: [ruby-dev:28694]

Wed Jun  7 16:22:51 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/tempfile.rb (Tempfile::make_tmpname): put dot between
	  basename and pid.  [ruby-talk:196272]

Wed Jun  7 14:53:04 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (errmap): add some winsock errors.

Wed Jun  7 11:34:38 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in: add new configure option `--with-winsock2' for mingw.

	* win32/Makefile.sub (config.h): define USE_WINSOCK2 in config.h
	  instead of in CPPFLAGS.

	* ext/socket/extconf.rb: determine whether to use winsock2 or not
	  by using with_config.

Wed Jun  7 10:45:10 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{configure.bat, setup.mak, Makefile.sub, win32.h}: add
	  new configure option `--with-winsock2'.
